# QuantEcon.py

./: .coveragerc  .coveralls.yml  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Fork Testing  LIB_README.md  LICENSE  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  README.md  bisection.py  career.py  career_ex1_solution.py  career_ex2_solution.py  career_ex3_solution.py  career_vf_plot.py  compute_fp.py  descriptor_eg.py  dice.py  discrete_rv.py  discrete_rv0.py  discreterv.py  doc-requirements.txt  ecdf.py  environment.yml  environment_np2.yml  estspec.py  gaussian_contours.py  ifp.py  ifp_capital_supply.py  ifp_policy_plots.py  ifp_savings_plots.py  ifp_stationary_dist.py  ifp_vfi_vs_pfi.py  (+54 more)
.github/: copilot-instructions.md  dependabot.yml
Added Folder/: README2.md
data/: employment.csv  gd.xls  graph_out.txt  test_pwt.csv  web_graph_data.txt
docs/: Makefile  README.md  make.bat  qe_apidoc.py  rtd-requirements.txt
examples/: 3dplot.py  3dvec.py  Solving an Initial Value Problem (IVP).ipynb  Testing_Examples.ipynb  aiyagari_compute_equilibrium.py  aiyagari_compute_policy.py  aiyagari_household.py  amss.py  amss_figures.py  ar1_acov.py  ar1_cycles.py  ar1_sd.py  ar1sim.py  arellano_vfi.py  asset_pricing.py  beta-binomial.py  bifurcation_diagram.py  binom_df.py  bisection.py  boxplot_example.py  career.py  career_vf_plot.py  cauchy_samples.py  chaos_class.py  chaotic_ts.py  clt3d.py  consumer.py  descriptor_eg.py  dice.py  duopoly_lqnash.py  duopoly_mpe.py  duopoly_mpe_dynamics.py  eigenvec.py  evans_sargent.py  evans_sargent_plot1.py  evans_sargent_plot2.py  finite_dp_og_example.py  first_notebook.ipynb  gd.xls  (+80 more)
(+644 files in other folders)
